Support for Configured & Cloth Config API (Gradle 9.4.0)